# adwm

./: .gitignore  .indent.pro  AUTHORS  AUTHORS.in  COMPLIANCE  ChangeLog  LICENSE  Makefile.am  NEWS  NEWS.in  NOTES  NOTES.sm  README  README.in  README.md  README.md.in  RELEASE  RELEASE.md  RELEASE.md.in  THANKS  TODO  _config.yml  adwm.1  adwm.1.pod  adwm.c  adwm.h  adwmrc  autogen.sh  config.h  configure.ac  configure.sh  configure.template  dist.sh  draw.c  echinus.1  echinus.c  echinus.h  ewmh.c  gennews.sh  index.md  (+2 more)
data/: Makefile.am  adwm.keysrc  adwmrc  bykeys  bykeys.adwm  bykeys.awesome  bykeys.blackbox  bykeys.dwm  bykeys.echinus  bykeys.fluxbox  bykeys.icewm  bykeys.metacity  bykeys.old  bykeys.openbox  bykeys.pekwm  bykeys.spectrwm  bykeys.velox  bykeys.wmaker  close.xbm  fill.xbm  float.xbm  iconify.xbm  keyscr  keysrc  keysrc.adwm  keysrc.awesome  keysrc.blackbox  keysrc.dwm  keysrc.echinus  keysrc.fluxbox  keysrc.icewm  keysrc.metacity  keysrc.old  keysrc.openbox  keysrc.pekwm  keysrc.spectrwm  keysrc.velox  keysrc.wmaker  lhalf.xbm  max.xbm  (+6 more)
data/styles/Default/: buttonrc  keysrc  stylerc
data/styles/Default/pixmaps/: close_focused.xpm  float_pressed.xpm  float_unfocus.xpm  lback_focused.xpm  lback_hovered.xpm  lback_pressed.xpm  lback_unfocus.xpm  lhalf_focused.xpm  lhalf_hovered.xpm  lhalf_pressed.xpm  lhalf_unfocus.xpm  max_focused.xpm  max_hovered.xpm  menu_pressed.xpm  menu_unfocus.xpm  min_pressed.xpm  rback_focused.xpm  rback_hovered.xpm  rback_pressed.xpm  rback_unfocus.xpm  rhalf_focused.xpm  rhalf_hovered.xpm  rhalf_pressed.xpm  rhalf_unfocus.xpm  shade_focused.xpm  shade_hovered.xpm  stick_focused.xpm  stick_hovered.xpm  stick_unfocus.xpm  stuck_focused.xpm  stuck_unfocus.xpm  tile_pressed.xpm  tile_unfocus.xpm  unshade_pressed.xpm  unshade_unfocus.xpm  xkill_focused.xpm  xkill_hovered.xpm  xkill_pressed.xpm  xkill_unfocus.xpm
data/themes/Default/: themerc
data/xsessions/: adwm.desktop
doc/: Makefile.am  adwm-buttons.5.in  adwm-config.1  adwm-config.5.in  adwm-config.pod  adwm-dock.5.in  adwm-keys.1  adwm-keys.1.pod  adwm-keys.5.in  adwm-keys.pod  adwm-rules.5.in  adwm-style.1  adwm-style.5.in  adwm-style.pod  adwm-theme.5.in  adwm.1  adwm.1.in  adwm.pod
src/: Makefile.am  actions.c  actions.h  adwm.c  adwm.h  adwm.valgrind  adwm_adwm.c  adwm_blackbox.c  adwm_bsp.c  adwm_float.c  adwm_fluxbox.c  adwm_grid.c  adwm_icewm.c  adwm_metacity.c  adwm_monocle.c  adwm_openbox.c  adwm_tile.c  adwm_tree.c  adwm_waimea.c  adwm_wmaker.c  buttons.c  buttons.h  config.c  config.h  draw.c  draw.h  ewmh.c  ewmh.h  ewmhpanel.c  icons.c  icons.h  image.c  image.h  imlib.c  imlib.h  layout.c  layout.h  parse.c  parse.h  pixbuf.c  (+23 more)
styles/Default/: keysrc  stylerc
styles/Default/pixmaps/: close_unfocus.xpm  float_focused.xpm  float_hovered.xpm  max_pressed.xpm  max_unfocus.xpm  menu_focused.xpm  menu_hovered.xpm  min_focused.xpm  min_hovered.xpm  min_unfocus.xpm  shade_pressed.xpm  shade_unfocus.xpm  stick_pressed.xpm  stuck_hovered.xpm  stuck_pressed.xpm  tile_focused.xpm  tile_hovered.xpm  unmax_focused.xpm  unmax_hovered.xpm  unmax_pressed.xpm  unmax_unfocus.xpm  unshade_focused.xpm  unshade_hovered.xpm
tests/: Makefile.am
xsessions/: adwm.desktop
